--- a/tools.html
+++ b/tools.html
@@ -389,7 +389,7 @@
               <td>Data Analysis</td>
           </tr>
            <tr>
-              <td><a href="https://github.com/jcaple18/MSPS", target="_blank">MSPS</a></td>
+              <td><a href="https://anthroappdepot.com/", target="_blank">MSPS</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
