--- a/tools.html
+++ b/tools.html
@@ -31,7 +31,6 @@
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #2a7bb6;" href="tools.html"><strong>FA Analytical Tools</strong><br></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>Centroid Banding</strong></a>
-                                    <div class="dropdown-divider border-secondary"></div>
                                 </div>
                             </li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
@@ -47,7 +46,7 @@
         </div>
         <div class="col-auto col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
             <h4>Forensic Anthropology Tools</h4>
-            <p>This table is a compilation of software tools in forensic anthropology and their associated attributes. If you wish to contribute or update any information, please email jjlynch [at] osteocoder [dot] com. For more information about computational tools in forensic anthropology see&nbsp;<a href="http://dx.doi.org/10.5744/fa.2018.0025" target="_blank">http://dx.doi.org/10.5744/fa.2018.0025</a>.</p><iframe src="http://127.0.0.1:4894/" width="700" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            <p>This table is a compilation of software tools in forensic anthropology and their associated attributes. If you wish to contribute or update any information, please email jjlynch [at] osteocoder [dot] com. For more information about computational tools in forensic anthropology see&nbsp;<a href="http://dx.doi.org/10.5744/fa.2018.0025" target="_blank">http://dx.doi.org/10.5744/fa.2018.0025</a>.</p><iframe src="http://osteocoder.com/shiny/FAtools" width="700" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
             <p>Last Updated: 1 June 2019<br>Download:&nbsp;<a href="FA_tools.csv" target="_blank">CSV</a></p><table id="example" class="table compact table-striped table-hover" style="width:100%">
 <thead>
        <tr>
