--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h4>What is this site?</h4>
             <p class="text-left">This site contains forensic anthropology data science projects and source code written primarily in the Julia and R programming languages. All source code is released 'as is' and is licensed as open source under the GPL version 2 or MIT licenses. Integrated code is released under a license relevant to their original license requirements and is stated within the root of the source code files. Particular tools can be used directly from the website through a Shiny UI.&nbsp;</p><div><br><br></div>
             <h4>What's new</h4>
-            <p>OsteoSort version 1.3.0 is currently in beta testing.</p><div><br><br></div>
+            <p>OsteoSort version 1.3.0 is now released. To use the live version please contact me for a username and password.</p><div><br><br></div>
             <h4>The Open Source Standard</h4>
             <p>This website and all projects therein are developed with an open source standard to meet ISO 17205 requirements for usability within a legal context. This includes full and open disclosure of all source code to aid with future auditing and traceability, complete version control and archiving of all versions, and full transparency in tracking any bugs or errors that are identified. For a comprehensive list of open source licenses see&nbsp;<a href="https://opensource.org/licenses">https://opensource.org/licenses</a>.</p><div><br><br></div>
             <h4>Associated Publications</h4>
