--- a/tools.html
+++ b/tools.html
@@ -399,7 +399,7 @@
         </div>
         <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
             <footer class="border rounded" style="background-color: #273039;">
-                <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
+                <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft&nbsp;2021&nbsp;- OsteoCodeR.com</strong></p>
             </footer>
         </div>
     </div>
