--- a/measurements.html
+++ b/measurements.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="assets/css/fluid-container-fix.css">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="assets/css/iframe.css">
     <link rel="stylesheet" href="assets/css/Logo.css">
 </head>
@@ -23,17 +22,19 @@
             <nav class="navbar navbar-light navbar-expand-md border rounded shadow-none navigation-clean" style="background-color: #273039;color: rgb(255,255,255);">
                 <div class="container"><a class="navbar-brand" href="#"><img style="background-image: url(&quot;assets/img/logo.png&quot;);width: 381px;height: 45px;" src="assets/img/logo.png">&nbsp;</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
-                        <ul class="nav navbar-nav ml-auto" style="color: #2a7bb6;">
+                        <ul class="navbar-nav ml-auto" style="color: #2a7bb6;">
                             <li class="nav-item"><a class="nav-link active" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="index.html"><i class="far fa-question-circle"></i><strong>&nbsp;About</strong></a></li>
-                            <li class="dropdown nav-item" style="color: rgb(42,123,182);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #2a7bb6;font-family: 'Open Sans', sans-serif;background-color: rgba(255,255,255,0);" href="#"><i class="fas fa-project-diagram"></i><strong>&nbsp;Projects</strong></a>
+                            <li class="dropdown nav-item" style="color: rgb(42,123,182);"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;background-color: rgba(255,255,255,0);" href="#"><i class="fas fa-project-diagram"></i><strong>&nbsp;Projects</strong></a>
                                 <div class="dropdown-menu border-secondary" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="osteosort.html"><strong>OsteoSort</strong></a>
-                                    <div class="dropdown-divider text-warning border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #2a7bb6;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
-                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="tools.html"><strong>FA Analytical Tools</strong><br></a>
+                                    <div class="dropdown-divider text-warning border-secondary"></div><a class="dropdown-item" href="#" style="font-size: 14px;color: #273039;"><strong>OsteoSort 3D</strong></a>
+                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong></a>
+                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="#" style="color: #273039;font-size: 14px;"><strong>StatureID</strong></a>
+                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="tools.html"><strong>FA Tools</strong></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>Centroid Banding</strong></a>
                                 </div>
                             </li>
-                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
+                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
                                 <div class="dropdown-menu border-secondary" style="background-color: #eeeeee;"><a class="dropdown-item text-break" style="color: #273039;font-size: 14px;" href="http://osteosort.net" target="_blank"><strong>OsteoSort</strong></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="#" style="color: #273039;font-size: 14px;"><strong>Beta Testing</strong></a>
                                 </div>
@@ -46,8 +47,8 @@
         </div>
         <div class="col-auto col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
             <h4>Measurement Standards</h4>
-            <p>This project standardizes measurement numbers across multiple measurement procedures. Due to changing standard numbers, this measurement guide was created to avoid downstream issues with CoRA and OsteoSort. These numbers will never change unless significant errors are identified. If a measurement becomes deprecated, the number will be indefinitely reserved. These standards provide a stable numbering platform on which advanced analytics can be built.</p>
-            <p>Current version: 0.0.1<br>Download: &nbsp;<a href="Standard_Measurements.csv" target="_blank">CSV</a><br></p><div><br><br></div><table id="example" class="table compact table-striped table-hover" style="width:100%">
+            <p>This project aims to standardize measurement numbers across various platforms. To prevent downstream issues with CoRA and OsteoSort caused by changing standard numbers, we have developed this measurement guide. These numbers will remain constant unless significant errors are found. If a measurement is deprecated, its number will be reserved. These standards ensure a stable numbering system, forming a reliable foundation for advanced analytics.</p>
+            <p>Current version: 0.0.2<br>Download: &nbsp;<a href="Standard_Measurements.csv" target="_blank">CSV</a><br>CoRA Measurement Guide:&nbsp;<a href="https://docs.coracore.org/en/latest/forensics-anthro-guide/measurements/">https://docs.coracore.org/en/latest/forensics-anthro-guide/measurements/</a></p><div><br><br></div><table id="example" class="table compact table-striped table-hover" style="width:100%">
 <thead>
 <tr class="row-1 odd">
 	<th class="column-1">OsteoCodeR 2019</th><th class="column-2">Buikstra &amp; Ubelaker 1994</th><th class="column-3">UTK 1994</th><th class="column-4">UTK 2016</th><th class="column-5">Byrd &amp; Adams 2003</th><th class="column-6">Simmons 1990</th><th class="column-7">Holland 1992</th><th class="column-8">Holland 1995</th><th class="column-9">Howells 1973</th>
@@ -749,12 +750,13 @@
         </div>
         <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
             <footer class="border rounded" style="background-color: #273039;">
-                <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft&nbsp;2021&nbsp;- OsteoCodeR.com</strong></p>
+                <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft&nbsp;2024 - OsteoCodeR.com</strong></p>
             </footer>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
     <script src="assets/js/z.js"></script>
